--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,14 @@
 ---
-layout: default
+layout: minimal
 ---
 
 <div class="home">
 
+  <span class="logo">
+    <img src="assets/images/logo.svg" alt="Jameson Grey Logo"/>
+  </span>
+
+  {% if sit.posts %}
   <h1 class="page-heading">Posts</h1>
   
   {{ content }}
@@ -21,5 +26,6 @@ layout: default
   </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  {% endif %}
 
 </div>
